@@ -36,7 +36,6 @@ import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
@@ -61,7 +60,7 @@ class RecipeLifecycleTest implements RewriteTest {
               .withMaxCycles(1)
             )
             .afterRecipe(run -> assertThat(run.getChangeset().getAllResults().stream()
-              .map(r -> r.getRecipeDescriptorsThatMadeChanges().get(0).getName()))
+              .map(r -> r.getRecipeDescriptorsThatMadeChanges().getFirst().getName()))
               .containsOnly("test.GeneratingRecipe")),
           text(null, "test", spec -> spec.path("test.txt"))
         );
@@ -119,13 +118,13 @@ class RecipeLifecycleTest implements RewriteTest {
               .isNotEmpty()
               .get()
               .as("Exception thrown in the scanning phase should record the responsible recipe")
-              .matches(m -> "org.openrewrite.RecipeLifecycleTest$ErrorDuringScanningPhase".equals(m.getRecipes().iterator().next().get(0).getDescriptor().getName()))
+              .matches(m -> "org.openrewrite.RecipeLifecycleTest$ErrorDuringScanningPhase".equals(m.getRecipes().iterator().next().getFirst().getDescriptor().getName()))
             )
           ));
     }
 
-    @Value
     @EqualsAndHashCode(callSuper = false)
+    @Value
     static class ErrorDuringScanningPhase extends ScanningRecipe<Integer> {
 
         @Override
@@ -158,8 +157,8 @@ class RecipeLifecycleTest implements RewriteTest {
         }
     }
 
-    @Value
     @EqualsAndHashCode(callSuper = false)
+    @Value
     static class DeleteFirst extends Recipe {
 
         @Override
@@ -175,7 +174,7 @@ class RecipeLifecycleTest implements RewriteTest {
 
         @Override
         public List<Recipe> getRecipeList() {
-            return Arrays.asList(
+            return List.of(
               new DeleteSourceFiles("test.txt"),
               new FindAndReplace("test", "", null, null, null, null, null, null));
         }
@@ -302,7 +301,6 @@ class RecipeLifecycleTest implements RewriteTest {
         }
     }
 
-    @DocumentExample
     @Test
     void accurateReportingOfRecipesMakingChanges() {
         rewriteRun(
@@ -312,7 +310,7 @@ class RecipeLifecycleTest implements RewriteTest {
             .afterRecipe(run -> {
                 var changes = run.getChangeset().getAllResults();
                 assertThat(changes).hasSize(1);
-                assertThat(changes.get(0).getRecipeDescriptorsThatMadeChanges().stream().map(RecipeDescriptor::getName))
+                assertThat(changes.getFirst().getRecipeDescriptorsThatMadeChanges().stream().map(RecipeDescriptor::getName))
                   .containsExactlyInAnyOrder("Change1", "Change2");
             }),
           text(
@@ -475,8 +473,8 @@ class RecipeLifecycleTest implements RewriteTest {
     @Test
     void declarativeRecipeChainFromResourcesIncludesImperativeRecipesInDescriptors() {
         rewriteRun(spec -> spec.recipeFromResources("test.declarative.sample.a")
-            .afterRecipe(recipeRun -> assertThat(recipeRun.getChangeset().getAllResults().get(0)
-              .getRecipeDescriptorsThatMadeChanges().get(0).getRecipeList().get(0)
+            .afterRecipe(recipeRun -> assertThat(recipeRun.getChangeset().getAllResults().getFirst()
+              .getRecipeDescriptorsThatMadeChanges().getFirst().getRecipeList().getFirst()
               .getDisplayName()).isEqualTo("Change text")),
           text("Hi", "after"));
     }
@@ -518,8 +516,8 @@ class DefaultConstructorRecipe extends Recipe {
     }
 }
 
-@SuppressWarnings("unused") // referenced in yaml
-@NoArgsConstructor
+@NoArgsConstructor // referenced in yaml
+@SuppressWarnings("unused")
 class NoArgRecipe extends Recipe {
     @Override
     public String getDisplayName() {
