@@ -19,7 +19,6 @@ import lombok.AllArgsConstructor;
 import org.junit.jupiter.api.Test;
 import org.openrewrite.*;
 import org.openrewrite.marker.SearchResult;
-import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.text.PlainText;
 import org.openrewrite.text.PlainTextVisitor;
@@ -27,66 +26,95 @@ import org.openrewrite.text.PlainTextVisitor;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.test.SourceSpecs.text;
 
-class RecipeRunStatsTest implements RewriteTest {
-
-    @AllArgsConstructor
-    static class RecipeWithApplicabilityTest extends Recipe {
-        @Override
-        public String getDisplayName() {
-            return "Recipe with an applicability test";
-        }
-
-        @Override
-        public String getDescription() {
-            return "This recipe is a test utility which exists to exercise RecipeRunStats.";
-        }
-
-        @Override
-        public TreeVisitor<?, ExecutionContext> getVisitor() {
-            return Preconditions.check(
-              new PlainTextVisitor<>() {
-                  @Override
-                  public PlainText visitText(PlainText text, ExecutionContext ctx) {
-                      if (!"sam".equals(text.getText())) {
-                          return SearchResult.found(text);
-                      }
-                      return text;
-                  }
-              },
-              new PlainTextVisitor<>() {
-                  @Override
-                  public PlainText visitText(PlainText tree, ExecutionContext ctx) {
-                      return tree.withText("sam");
-                  }
-              });
-        }
+@AllArgsConstructor
+class RecipeWithApplicabilityTest extends Recipe {
+    @Override
+    public String getDisplayName() {
+        return "Recipe with an applicability test";
     }
 
     @Override
-    public void defaults(RecipeSpec spec) {
-        spec.recipe(new RecipeWithApplicabilityTest());
+    public String getDescription() {
+        return "This recipe is a test utility which exists to exercise RecipeRunStats.";
     }
+
+    @Option(displayName = "New text", example = "txt")
+    String newText;
+
+    @Override
+    public TreeVisitor<?, ExecutionContext> getVisitor() {
+        return Preconditions.check(
+          new PlainTextVisitor<>() {
+              @Override
+              public PlainText visitText(PlainText text, ExecutionContext ctx) {
+                  if (!"sam".equals(text.getText())) {
+                      return SearchResult.found(text);
+                  }
+                  return text;
+              }
+          },
+          new PlainTextVisitor<>() {
+              @Override
+              public PlainText visitText(PlainText tree, ExecutionContext ctx) {
+                  return tree.withText(newText);
+              }
+          }
+        );
+    }
+}
+
+class RecipeRunStatsTest implements RewriteTest {
 
     @DocumentExample
     @Test
     void singleRow() {
         rewriteRun(
-          spec -> spec.dataTable(RecipeRunStats.Row.class, rows -> {
+          spec -> spec
+            .recipe(new RecipeWithApplicabilityTest("sam"))
+            .dataTable(RecipeRunStats.Row.class, rows -> {
               assertThat(rows)
                 .as("Running a single recipe on a single source should produce a single row in the RecipeRunStats table")
                 .hasSize(1);
-              RecipeRunStats.Row row = rows.get(0);
+              RecipeRunStats.Row row = rows.getFirst();
               assertThat(row.getRecipe()).endsWith("RecipeWithApplicabilityTest");
               assertThat(row.getSourceFiles())
-                .as("Test framework will invoke the recipe once when it is expected to make a change, " +
-                    "then once again when it is expected to make no change")
-                .isEqualTo(2);
-              assertThat(row.getEditMax()).isGreaterThan(0);
-              assertThat(row.getEditTotalTime())
+                .isEqualTo(1);
+              assertThat(row.getEditMaxNs()).isGreaterThan(0);
+              assertThat(row.getEditTotalTimeNs())
                 .as("Cumulative time should be greater than any single visit time")
-                .isGreaterThan(row.getEditMax());
+                .isGreaterThan(row.getEditMaxNs());
           }),
           text("samuel", "sam")
+        );
+    }
+
+    @Test
+    void sourceFilesCountStatsForSameRecipe() {
+        rewriteRun(
+          spec -> spec
+            .recipeFromYaml("""
+                ---
+                type: specs.openrewrite.org/v1beta/recipe
+                name: org.openrewrite.SeveralMethodNameChangeRecipes
+                description: Test.
+                recipeList:
+                  - org.openrewrite.table.RecipeWithApplicabilityTest:
+                      newText: sam1
+                  - org.openrewrite.table.RecipeWithApplicabilityTest:
+                      newText: sam2
+                """,
+              "org.openrewrite.SeveralMethodNameChangeRecipes")
+            .dataTable(RecipeRunStats.Row.class, rows -> {
+                assertThat(rows)
+                  .as("Running declarative recipe with parametrized recipe a single source should produce a two rows in the RecipeRunStats table")
+                  .hasSize(2);
+                for (RecipeRunStats.Row row : rows) {
+                    assertThat(row.getSourceFiles())
+                      .as("If the same recipe runs with different parameters it shouldn't increment several times source files count")
+                      .isEqualTo(1);
+                }
+            }).expectedCyclesThatMakeChanges(2),
+          text("sem", "sam2")
         );
     }
 }
