@@ -16,8 +16,17 @@
 package org.openrewrite.gradle;
 
 import org.junit.jupiter.api.Test;
+import org.openrewrite.InMemoryExecutionContext;
+import org.openrewrite.Issue;
+import org.openrewrite.Parser;
+import org.openrewrite.SourceFile;
 import org.openrewrite.java.tree.J;
 import org.openrewrite.test.RewriteTest;
+import org.openrewrite.tree.ParseError;
+
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.gradle.Assertions.*;
@@ -32,11 +41,11 @@ class GradleParserTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               gradleEnterprise {
                   server = 'https://enterprise-samples.gradle.com'
                   buildScan {
@@ -54,23 +63,23 @@ class GradleParserTest implements RewriteTest {
           buildGradle(
             """
               import org.gradle.api.Project
-              
+
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation "org.openrewrite:rewrite-java:latest.release"
               }
               """,
             spec -> spec.afterRecipe(cu -> {
                 assertThat(cu.getStatements()).hasSize(4);
-                assertThat(cu.getStatements().get(0)).isInstanceOf(J.Import.class);
-                J.Import i = (J.Import) cu.getStatements().get(0);
+                assertThat(cu.getStatements().getFirst()).isInstanceOf(J.Import.class);
+                J.Import i = (J.Import) cu.getStatements().getFirst();
                 assertThat(i.getTypeName()).isEqualTo("org.gradle.api.Project");
                 assertThat(cu.getStatements().get(3)).isInstanceOf(J.MethodInvocation.class);
                 J.MethodInvocation m = (J.MethodInvocation) cu.getStatements().get(3);
@@ -89,11 +98,11 @@ class GradleParserTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation "org.openrewrite:rewrite-java:latest.release"
               }
@@ -125,15 +134,15 @@ class GradleParserTest implements RewriteTest {
                * LICENSE
                */
               import org.gradle.api.Project
-              
+
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   testImplementation "junit:junit:4.13"
               }
@@ -150,11 +159,11 @@ class GradleParserTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               // Some comment
               dependencies {
                   testImplementation "junit:junit:4.13"
@@ -172,14 +181,14 @@ class GradleParserTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               // Deliberately not first, as per test
               import org.gradle.api.Project
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   testImplementation "junit:junit:4.13"
               }
@@ -196,13 +205,13 @@ class GradleParserTest implements RewriteTest {
               plugins {
                   id 'java'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
-              
+
                   // String notation
                   implementation "org.openrewrite:rewrite-java:latest.release"
                   implementation ("org.openrewrite:rewrite-java:latest.release")
@@ -215,7 +224,7 @@ class GradleParserTest implements RewriteTest {
                   implementation ( "org.openrewrite:rewrite-java:latest.release" ) {
                       transitive = false
                   }
-              
+
                   // Map notation
                   implementation group: "org.openrewrite", name: "rewrite-java", version: "latest.release"
                   implementation(group: "org.openrewrite", name: "rewrite-java", version: "latest.release")
@@ -228,7 +237,7 @@ class GradleParserTest implements RewriteTest {
                   implementation( group: "org.openrewrite", name: "rewrite-java", version: "latest.release" ) {
                       transitive = false
                   }
-                  
+
                   // Map literal notation
                   implementation([group: "org.openrewrite", name: "rewrite-java", version: "latest.release"])
                   implementation([group: "org.openrewrite", name: "rewrite-java", version: "latest.release"]) { transitive = false }
@@ -254,9 +263,121 @@ class GradleParserTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void escapedAndNonEscapedDollarSignsInSingleDoubleQuotes() {
+        GradleParser gradleParser = new GradleParser(new GradleParser.Builder());
+        Stream<SourceFile> sourceFileStream = gradleParser.parseInputs(List.of(Parser.Input.fromString("""
+          plugins {
+            id 'java-library'
+          }
+
+          task executeShellCommands {
+              doLast {
+                  exec {
+                      commandLine 'bash', '-c', "RESPONSE=\\$(curl --location -s --request POST \\"https://localhost/$path\\")"
+                  }
+              }
+          }
+          """)), null, new InMemoryExecutionContext());
+        Optional<SourceFile> optionalSourceFile = sourceFileStream.findFirst();
+        assertThat(optionalSourceFile).isPresent();
+        SourceFile sourceFile = optionalSourceFile.get();
+        assertThat(sourceFile).isNotInstanceOf(ParseError.class);
+    }
+
+    @Test
+    void escapedAndNonEscapedDollarSignsInSingleSingleQuotes() {
+        GradleParser gradleParser = new GradleParser(new GradleParser.Builder());
+        Stream<SourceFile> sourceFileStream = gradleParser.parseInputs(List.of(Parser.Input.fromString("""
+          plugins {
+            id 'java-library'
+          }
+
+          task executeShellCommands {
+              doLast {
+                  exec {
+                      commandLine 'bash', '-c', 'RESPONSE=\\$(curl --location -s --request POST "https://localhost/$path")'
+                  }
+              }
+          }
+          """)), null, new InMemoryExecutionContext());
+        Optional<SourceFile> optionalSourceFile = sourceFileStream.findFirst();
+        assertThat(optionalSourceFile).isPresent();
+        SourceFile sourceFile = optionalSourceFile.get();
+        assertThat(sourceFile).isNotInstanceOf(ParseError.class);
+    }
+
+    @Test
+    void escapedAndNonEscapedDollarSignsInTripleDoubleQuotes() {
+        GradleParser gradleParser = new GradleParser(new GradleParser.Builder());
+        Stream<SourceFile> sourceFileStream = gradleParser.parseInputs(List.of(Parser.Input.fromString("""
+          plugins {
+            id 'java-library'
+          }
+
+          task executeShellCommands {
+              doLast {
+                  exec {
+                      commandLine 'bash', '-c', \"""
+                          RESPONSE=\\$(curl --location -s --request POST "https://localhost")
+                          echo "TEST" > "\\$(echo $someVar)"
+                      \"""
+                  }
+              }
+          }
+          """)), null, new InMemoryExecutionContext());
+        Optional<SourceFile> optionalSourceFile = sourceFileStream.findFirst();
+        assertThat(optionalSourceFile).isPresent();
+        SourceFile sourceFile = optionalSourceFile.get();
+        assertThat(sourceFile).isNotInstanceOf(ParseError.class);
+    }
+
+    @Test
+    void escapedAndNonEscapedDollarSignsInTripleSingleQuotes() {
+        GradleParser gradleParser = new GradleParser(new GradleParser.Builder());
+        Stream<SourceFile> sourceFileStream = gradleParser.parseInputs(List.of(Parser.Input.fromString("""
+          plugins {
+            id 'java-library'
+          }
+
+          task executeShellCommands {
+              doLast {
+                  exec {
+                      commandLine 'bash', '-c', '''
+                          RESPONSE=\\$(curl --location -s --request POST "https://localhost")
+                          echo "TEST" > "\\$(echo $someVar)"
+                      '''
+                  }
+              }
+          }
+          """)), null, new InMemoryExecutionContext());
+        Optional<SourceFile> optionalSourceFile = sourceFileStream.findFirst();
+        assertThat(optionalSourceFile).isPresent();
+        SourceFile sourceFile = optionalSourceFile.get();
+        assertThat(sourceFile).isNotInstanceOf(ParseError.class);
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/4614")
+    @Test
+    void trailingComma() {
+        rewriteRun(
+          buildGradle(
+            """
+              plugins {
+                  id 'java-library'
+              }
+              dependencies {
+                  implementation platform("commons-lang:commons-lang:2.6", )
+                  implementation platform("commons-lang:commons-lang3:3.0",)
               }
               """
           )
