@@ -54,7 +54,7 @@ class ChangeTypeAdaptabilityTest implements RewriteTest {
               """,
             spec -> spec.path("file.groovy").afterRecipe(cu -> {
                 assertThat("newFile.groovy").isEqualTo(cu.getSourcePath().toString());
-                assertThat(TypeUtils.isOfClassType(cu.getClasses().get(0).getType(), "newFile")).isTrue();
+                assertThat(TypeUtils.isOfClassType(cu.getClasses().getFirst().getType(), "newFile")).isTrue();
             })
           )
         );
@@ -73,14 +73,14 @@ class ChangeTypeAdaptabilityTest implements RewriteTest {
           groovy(
             """
               import a.b.Original
-              
+
               class A {
                   Original type
               }
               """,
             """
               import x.y.Target
-              
+
               class A {
                   Target type
               }
@@ -102,14 +102,14 @@ class ChangeTypeAdaptabilityTest implements RewriteTest {
           groovy(
             """
               import a.b.Original
-              
+
               class A {
                   Original type
               }
               """,
             """
               import x.y.Target
-              
+
               class A {
                   Target type
               }
@@ -118,9 +118,9 @@ class ChangeTypeAdaptabilityTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("DataFlowIssue")
     @ExpectedToFail("fails because there's a reference change but no content diff but that's the point; would need to adjust RewriteTest")
     @Issue("https://github.com/openrewrite/rewrite/issues/3058")
+    @SuppressWarnings("DataFlowIssue")
     @Test
     void changeTypeAttributionImplicitUsage() {
         rewriteRun(
@@ -128,14 +128,14 @@ class ChangeTypeAdaptabilityTest implements RewriteTest {
           groovy(
             """
               import java.util.Collections
-                
+
               class Test {
                   int zero = Collections.emptyList().size()
               }
               """,
             spec -> spec.afterRecipe(cu -> {
-                J.VariableDeclarations varDecl = (J.VariableDeclarations) cu.getClasses().get(0).getBody().getStatements().get(0);
-                J.MethodInvocation sizeMi = (J.MethodInvocation) varDecl.getVariables().get(0).getInitializer();
+                J.VariableDeclarations varDecl = (J.VariableDeclarations) cu.getClasses().getFirst().getBody().getStatements().getFirst();
+                J.MethodInvocation sizeMi = (J.MethodInvocation) varDecl.getVariables().getFirst().getInitializer();
                 assertThat(TypeUtils.isOfClassType(sizeMi.getMethodType().getDeclaringType(),
                   "java.util.ArrayList")).isTrue();
                 J.MethodInvocation emptyListMi = (J.MethodInvocation) sizeMi.getSelect();
