@@ -82,10 +82,10 @@ class VariableDeclarationsTest implements RewriteTest {
               List<? extends String> l
               """,
             spec -> spec.beforeRecipe(cu -> {
-                var varDecl = (J.VariableDeclarations) cu.getStatements().get(0);
+                var varDecl = (J.VariableDeclarations) cu.getStatements().getFirst();
                 assertThat(varDecl.getTypeExpression()).isInstanceOf(J.ParameterizedType.class);
                 var typeExpression = requireNonNull(requireNonNull((J.ParameterizedType) varDecl.getTypeExpression())
-                  .getTypeParameters()).get(0);
+                  .getTypeParameters()).getFirst();
                 assertThat(typeExpression).isInstanceOf(J.Wildcard.class);
                 assertThat(((J.Wildcard) typeExpression).getBound()).isEqualTo(J.Wildcard.Bound.Extends);
             })
@@ -108,24 +108,6 @@ class VariableDeclarationsTest implements RewriteTest {
     void diamondOperator() {
         rewriteRun(
           groovy("List<String> l = new ArrayList< /* */ >()")
-        );
-    }
-
-    @Issue("https://github.com/openrewrite/rewrite/issues/2752")
-    @Test
-    void numericValueWithUnderscores() {
-        rewriteRun(
-          groovy(
-                """
-          def l1 = 10_000L
-          def l2 = 10_000l
-          def i = 10_000
-          def d1 = 10_000d
-          def d2 = 10_000D
-          def f1 = 10_000f
-          def f2 = 10_000.0F
-          """
-          )
         );
     }
 
@@ -181,7 +163,7 @@ class VariableDeclarationsTest implements RewriteTest {
                         return SearchResult.found(multiVariable);
                     }
                 }, cu, new ArrayList<>(), J.VariableDeclarations.class, v -> v);
-                assertThat(variables.get(0).getLeadingAnnotations()).hasSize(1);
+                assertThat(variables.getFirst().getLeadingAnnotations()).hasSize(1);
             })
           )
         );
