@@ -15,6 +15,7 @@
  */
 package org.openrewrite.java;
 
+import org.intellij.lang.annotations.Language;
 import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 import org.openrewrite.DocumentExample;
@@ -30,13 +31,12 @@ import org.openrewrite.test.SourceSpec;
 import org.openrewrite.test.SourceSpecs;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptySet;
 import static java.util.Collections.singletonList;
+import static java.util.stream.Collectors.joining;
 import static org.openrewrite.java.Assertions.*;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 
@@ -223,19 +223,19 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package com.acme.bank;
-              
+
               import com.acme.bank.*;
-              
+
               class Foo {
               }
               """,
             """
               package com.acme.bank;
-              
+
               import com.acme.bank.*;
-              
+
               import com.acme.bank.Record;
-              
+
               class Foo {
               }
               """,
@@ -262,6 +262,7 @@ class AddImportTest implements RewriteTest {
           )
         );
     }
+
     @Test
     void dontImportJavaLang() {
         rewriteRun(
@@ -295,8 +296,8 @@ class AddImportTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/1156")
+    @Test
     void dontImportJavaLangWhenUsingDefaultPackage() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new AddImport<>("java.lang.String", null, false))),
@@ -561,14 +562,14 @@ class AddImportTest implements RewriteTest {
 
     @Test
     void importsAddedInAlphabeticalOrder() {
-        List<String> otherPackages = Arrays.asList("c", "c.c", "c.c.c");
+        List<String> otherPackages = List.of("c", "c.c", "c.c.c");
         List<SourceSpecs> otherImports = new ArrayList<>();
         for (int i = 0; i < otherPackages.size(); i++) {
             String pkg = otherPackages.get(i);
             otherImports.add(java("package " + pkg + ";\npublic class C" + i + " {}", SourceSpec::skip));
         }
 
-        List<String> packages = Arrays.asList("b", "c.b", "c.c.b");
+        List<String> packages = List.of("b", "c.b", "c.c.b");
         for (int order = 0; order < packages.size(); order++) {
             String pkg = packages.get(order);
 
@@ -592,21 +593,21 @@ class AddImportTest implements RewriteTest {
               java(
                 """
                   package a;
-    
+
                   import c.C0;
                   import c.c.C1;
                   import c.c.c.C2;
-    
+
                   class A {}
                   """,
                 String.format("""
                     package a;
-      
+
                     %s
-      
+
                     class A {}
                     """,
-                  expectedImports.stream().map(i -> "import " + i + ";").collect(Collectors.joining("\n"))
+                  expectedImports.stream().map(i -> "import " + i + ";").collect(joining("\n"))
                 )
               )
             );
@@ -816,7 +817,7 @@ class AddImportTest implements RewriteTest {
           spec -> spec.recipes(
             toRecipe(() -> new JavaIsoVisitor<>() {
                 @Override
-                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext executionContext) {
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                     return method.withSelect(null);
                 }
             }),
@@ -856,8 +857,8 @@ class AddImportTest implements RewriteTest {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
-              public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
-                  method = super.visitMethodDeclaration(method, executionContext);
+              public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext ctx) {
+                  method = super.visitMethodDeclaration(method, ctx);
                   method = JavaTemplate.builder("List<Builder> list = new ArrayList<>();")
                     .imports("java.util.ArrayList", "java.util.List")
                     .staticImports("java.util.Calendar.Builder")
@@ -914,8 +915,8 @@ class AddImportTest implements RewriteTest {
           spec -> spec.recipes(
             toRecipe(() -> new JavaIsoVisitor<>() {
                 @Override
-                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext executionContext) {
-                    if (method.getName().getSimpleName().equals("emptyList")) {
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
+                    if ("emptyList".equals(method.getName().getSimpleName())) {
                         return method.withSelect(null);
                     }
                     return method;
@@ -1031,7 +1032,7 @@ class AddImportTest implements RewriteTest {
                   Map<String, String> map = new HashMap<>();
                   Set<String> set = new HashSet<>();
                   List<String> test = Collections.singletonList("test");
-                  List<String> test2 = new java.util.ArrayList<>();
+                  List<String> test2 = new ArrayList<>();
               }
               """
           )
@@ -1100,7 +1101,7 @@ class AddImportTest implements RewriteTest {
                 import java.util.Collections;
                 import java.util.Map;
                 import java.util.Set;
-  
+
                 @SuppressWarnings("ALL")
                 class Test {
                     List list;
@@ -1113,7 +1114,7 @@ class AddImportTest implements RewriteTest {
                 import java.util.List;
                 import java.util.Map;
                 import java.util.Set;
-  
+
                 @SuppressWarnings("ALL")
                 class Test {
                     List list;
@@ -1316,7 +1317,7 @@ class AddImportTest implements RewriteTest {
 
               class A {}
               """.replace("\n", "\r\n"),
-            """        
+            """
               import java.util.List;
               import java.util.Set;
 
@@ -1469,4 +1470,274 @@ class AddImportTest implements RewriteTest {
           )
         );
     }
+
+    @Test
+    void fullyQualifyOnAmbiguousImport() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                  maybeAddImport("java.sql.Date");
+                  JavaTemplate template = JavaTemplate.builder(
+                      "Date sqlDate = new Date(System.currentTimeMillis());")
+                    .imports("java.sql.Date")
+                    .build();
+                  return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+              }
+          }).withMaxCycles(1)),
+          java(
+            """
+              import java.util.Date;
+
+              class Ambiguous {
+                  Date date = new Date(System.currentTimeMillis());
+              }
+              """,
+            """
+              import java.util.Date;
+
+              class Ambiguous {
+                  java.sql.Date sqlDate = new java.sql.Date(System.currentTimeMillis());
+                  Date date = new Date(System.currentTimeMillis());
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void fullyQualifyOnAmbiguousStaticFieldImport() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+                @Override
+                public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                    maybeAddImport("java.awt.Color", "RED", true);
+                    maybeAddImport("java.awt.Color", true);
+                    JavaTemplate template = JavaTemplate.builder(
+                        "Color color = RED;")
+                      .imports("java.awt.Color")
+                      .staticImports("java.awt.Color.RED")
+                      .build();
+                    return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+                }
+            }).withMaxCycles(1))
+            .parser(JavaParser.fromJavaVersion().dependsOn(
+              """
+                package com.example;
+
+                public class CustomColor {
+                    public static final String RED = "red";
+                }
+                """
+            )),
+          java(
+            """
+              import static com.example.CustomColor.RED;
+
+              class Ambiguous {
+                  void method() {
+                      // RED is from com.example.CustomColor
+                      System.out.println(RED);
+                  }
+              }
+              """,
+            """
+              import java.awt.Color;
+
+              import static com.example.CustomColor.RED;
+
+              class Ambiguous {
+                  Color color = Color.RED;
+                  void method() {
+                      // RED is from com.example.CustomColor
+                      System.out.println(RED);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void fullyQualifyOnAmbiguousStaticMethodImport() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                  maybeAddImport("java.util.Arrays", "sort", true);
+                  maybeAddImport("java.util.List", true);
+                  JavaTemplate template = JavaTemplate.builder(
+                      "List<Integer> list = sort(new int[]{1, 2, 3});")
+                    .imports("java.util.List")
+                    .staticImports("java.util.Arrays.sort")
+                    .build();
+                  return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+              }
+          }).withMaxCycles(1)),
+          java(
+            """
+              import static java.util.Collections.sort;
+
+              import java.util.ArrayList;
+
+              class Ambiguous {
+                  void method() {
+                      sort(new ArrayList<String>());
+                  }
+              }
+              """,
+            """
+              import static java.util.Collections.sort;
+
+              import java.util.ArrayList;
+              import java.util.List;
+
+              class Ambiguous {
+                  List<Integer> list = java.util.Arrays.sort(new int[]{1, 2, 3});
+                  void method() {
+                      sort(new ArrayList<String>());
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/5530")
+    @Test
+    void importWithNestedClass() {
+        @Language("java") final String auxSource = """
+          package com.example;
+
+          public interface A {
+              enum DataType {
+                  TYPE_1,
+                  TYPE_2
+              }
+          }
+          """;
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+                @Override
+                public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                    JavaTemplate template = JavaTemplate.builder(
+                        "DataType d2 = DataType.TYPE_2;")
+                      .javaParser(JavaParser.fromJavaVersion().dependsOn(auxSource))
+                      .imports("com.example.A.DataType")
+                      .build();
+                    maybeAddImport("com.example.A.DataType");
+                    return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+                }
+            }).withMaxCycles(1))
+            .parser(JavaParser.fromJavaVersion().dependsOn(auxSource)),
+          java(
+            """
+              import com.example.A;
+              import com.example.A.DataType;
+
+              class Test {
+                  DataType d1 = DataType.TYPE_1;
+                  A a;
+              }
+              """,
+            """
+              import com.example.A;
+              import com.example.A.DataType;
+
+              class Test {
+                  DataType d2 = DataType.TYPE_2;
+                  DataType d1 = DataType.TYPE_1;
+                  A a;
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void codeSanityCheck() {
+        rewriteRun(
+          spec -> spec.parser(JavaParser.fromJavaVersion().dependsOn(
+            """
+              package com.ex.app.config;
+              public class OldA {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldB {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldC {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldD {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldE {}
+              """
+          )).recipes(
+            new ChangeType("com.ex.app.config.OldA", "com.ex.app.config.NewA", null),
+            new ChangeType("com.ex.app.task.OldB", "com.ex.app.task.NewB", null),
+            new ChangeType("com.ex.app.task.OldC", "com.ex.app.task.NewC", null),
+            new ChangeType("com.ex.app.task.OldD", "com.ex.app.task.NewD", null),
+            new ChangeType("com.ex.app.task.OldE", "com.ex.app.task.NewE", null)
+          ),
+          java(
+            """
+              package sample;
+
+              import com.ex.app.config.OldA;
+              import com.ex.app.task.OldB;
+              import com.ex.app.task.OldC;
+              import com.ex.app.task.OldD;
+              import com.ex.app.task.OldE;
+
+              public class A {
+                  private final OldA a;
+                  private final OldB b;
+                  private final OldC c;
+                  private final OldD d;
+                  private final OldE e;
+
+                  public A(OldA a, OldB b, OldC c, OldD d, OldE e) {
+                      this.a = a;
+                      this.b = b;
+                      this.c = c;
+                      this.d = d;
+                      this.e = e;
+                  }
+              }
+              """,
+            """
+          package sample;
+
+          import com.ex.app.config.NewA;
+          import com.ex.app.task.NewB;
+          import com.ex.app.task.NewC;
+          import com.ex.app.task.NewD;
+          import com.ex.app.task.NewE;
+
+          public class A {
+              private final NewA a;
+              private final NewB b;
+              private final NewC c;
+              private final NewD d;
+              private final NewE e;
+
+              public A(NewA a, NewB b, NewC c, NewD d, NewE e) {
+                  this.a = a;
+                  this.b = b;
+                  this.c = c;
+                  this.d = d;
+                  this.e = e;
+              }
+          }
+          """
+          )
+        );
+    }
+
 }
