@@ -78,9 +78,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import java.util.Map;
-              
+
               public class TestController {
-              
+
                   public Map.Entry respond() {
                      return null;
                   }
@@ -88,9 +88,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import java.util.List;
-              
+
               public class TestController {
-              
+
                   public List respond() {
                      return null;
                   }
@@ -133,7 +133,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import java.util.logging.*;
-              
+
               class Test {
                   static void method() {
                       LoggingMXBean loggingBean = null;
@@ -143,7 +143,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import java.lang.management.PlatformLoggingMXBean;
               import java.util.logging.*;
-              
+
               class Test {
                   static void method() {
                       PlatformLoggingMXBean loggingBean = null;
@@ -162,7 +162,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import java.util.logging.LoggingMXBean;
-              
+
               class Test {
                   static void method() {
                       LoggingMXBean loggingBean = null;
@@ -171,7 +171,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import java.lang.management.PlatformLoggingMXBean;
-              
+
               class Test {
                   static void method() {
                       PlatformLoggingMXBean loggingBean = null;
@@ -182,8 +182,8 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("InstantiationOfUtilityClass")
     @Issue("https://github.com/openrewrite/rewrite/issues/788")
+    @SuppressWarnings("InstantiationOfUtilityClass")
     @Test
     void unnecessaryImport() {
         rewriteRun(
@@ -191,7 +191,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import test.Outer;
-              
+
               class Test {
                   private Outer p = Outer.of();
                   private Outer p2 = test.Outer.of();
@@ -201,12 +201,12 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package test;
-              
+
               public class Outer {
                   public static Outer of() {
                       return new Outer();
                   }
-              
+
                   public static class Inner {
                   }
               }
@@ -215,8 +215,8 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("rawtypes")
     @Issue("https://github.com/openrewrite/rewrite/issues/868")
+    @SuppressWarnings("rawtypes")
     @Test
     void changeInnerClassToOuterClass() {
         rewriteRun(
@@ -225,7 +225,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import java.util.Map;
               import java.util.Map.Entry;
-              
+
               class Test {
                   Entry p;
                   Map.Entry p2;
@@ -234,7 +234,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import java.util.List;
-              
+
               class Test {
                   List p;
                   List p2;
@@ -253,14 +253,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import java.io.File;
-              
+
               class Test {
                   String p = File.separator;
               }
               """,
             """
               import my.pkg.List;
-              
+
               class Test {
                   String p = List.separator;
               }
@@ -276,8 +276,8 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("rawtypes")
     @Issue("https://github.com/openrewrite/rewrite/issues/774")
+    @SuppressWarnings("rawtypes")
     @Test
     void replaceWithNestedType() {
         rewriteRun(
@@ -285,14 +285,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import java.io.File;
-              
+
               class Test {
                   File p;
               }
               """,
             """
               import java.util.Map;
-              
+
               class Test {
                   Map.Entry p;
               }
@@ -309,14 +309,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package a;
-              
+
               class A {
                   private static class B1 {}
               }
               """,
             """
               package a;
-              
+
               class A {
                   private static class B2 {}
               }
@@ -333,7 +333,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package a;
-              
+
               class A {
                   public static class B {
                       public static class C {
@@ -343,7 +343,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package a;
-              
+
               class A {
                   public static class B {
                       public static class C2 {
@@ -361,12 +361,12 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B extends A1 {}
               """,
             """
               import a.A2;
-              
+
               public class B extends A2 {}
               """
           ),
@@ -384,7 +384,7 @@ class ChangeTypeTest implements RewriteTest {
             "public class B extends a.A1 {}",
             """
               import a.A2;
-              
+
               public class B extends A2 {}
               """
           )
@@ -403,7 +403,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import a.b.d.A2;
-              
+
               @A2 public class B {}
               """
           )
@@ -417,7 +417,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product;
-              
+
               public class Pojo {
               }
               """
@@ -425,12 +425,12 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.project.impl;
-              
+
               import com.acme.product.Pojo;
-              
+
               public class UsePojo2 {
                   Pojo[] p;
-              
+
                   void run() {
                       p[0] = null;
                   }
@@ -438,12 +438,12 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package com.acme.project.impl;
-              
+
               import com.acme.product.v2.Pojo;
-              
+
               public class UsePojo2 {
                   Pojo[] p;
-              
+
                   void run() {
                       p[0] = null;
                   }
@@ -462,14 +462,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  A1[] a = new A1[0];
               }
               """,
             """
               import a.A2;
-              
+
               public class B {
                  A2[] a = new A2[0];
               }
@@ -486,14 +486,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class A {
                   A1[][] multiDimensionalArray;
               }
               """,
             """
               import a.A2;
-              
+
               public class A {
                   A2[][] multiDimensionalArray;
               }
@@ -520,12 +520,12 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B extends A1 implements I1 {}
               """,
             """
               import a.A2;
-              
+
               public class B extends A2 implements I2 {}
               """
           )
@@ -541,14 +541,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  public A1 foo() throws A1 { return null; }
               }
               """,
             """
               import a.A2;
-              
+
               public class B {
                  public A2 foo() throws A2 { return null; }
               }
@@ -565,10 +565,10 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  public <T extends A1> T generic(T n, java.util.List<? super A1> in) {
-              
+
                  }
                  public void test() {
                      A1.stat();
@@ -578,10 +578,10 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import a.A2;
-              
+
               public class B {
                  public <T extends A2> T generic(T n, java.util.List<? super A2> in) {
-              
+
                  }
                  public void test() {
                      A2.stat();
@@ -602,7 +602,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  public void test() {
                      try {}
@@ -612,7 +612,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import a.A2;
-              
+
               public class B {
                  public void test() {
                      try {}
@@ -632,14 +632,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  A1 f1, f2;
               }
               """,
             """
               import a.A2;
-              
+
               public class B {
                  A2 f1, f2;
               }
@@ -656,14 +656,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  A1 a = new A1();
               }
               """,
             """
               import a.A2;
-              
+
               public class B {
                  A2 a = new A2();
               }
@@ -672,9 +672,9 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
+    @Issue("https://github.com/openrewrite/rewrite/issues/704")
     @SuppressWarnings("UnnecessaryLocalVariable")
     @Test
-    @Issue("https://github.com/openrewrite/rewrite/issues/704")
     void updateAssignments() {
         //noinspection UnnecessaryLocalVariable
         rewriteRun(
@@ -683,7 +683,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               class B {
                   void method(A1 param) {
                       A1 a = param;
@@ -692,7 +692,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import a.A2;
-              
+
               class B {
                   void method(A2 param) {
                       A2 a = param;
@@ -711,18 +711,18 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               import java.util.Map;
-              
+
               public class B {
                  Map<A1, A1> m;
               }
               """,
             """
               import a.A2;
-              
+
               import java.util.Map;
-              
+
               public class B {
                  Map<A2, A2> m;
               }
@@ -740,14 +740,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  A1 a = (A1) null;
               }
               """,
             """
               import a.A2;
-              
+
               public class B {
                  A2 a = (A2) null;
               }
@@ -764,14 +764,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class A {
                   Class<?> clazz = A1.class;
               }
               """,
             """
               import a.A2;
-              
+
               public class A {
                   Class<?> clazz = A2.class;
               }
@@ -788,7 +788,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class B {
                  A1 a = null;
                  public void test() { a.foo(); }
@@ -796,7 +796,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import a.A2;
-              
+
               public class B {
                  A2 a = null;
                  public void test() { a.foo(); }
@@ -815,7 +815,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import static a.A1.stat;
-              
+
               public class B {
                   public void test() {
                       stat();
@@ -824,7 +824,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import static a.A2.stat;
-              
+
               public class B {
                   public void test() {
                       stat();
@@ -841,7 +841,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product;
-              
+
               public class RunnableFactory {
                   public static String getString() {
                       return "hello";
@@ -852,9 +852,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.project.impl;
-              
+
               import static com.acme.product.RunnableFactory.getString;
-              
+
               public class StaticImportWorker {
                   public void work() {
                       getString().toLowerCase();
@@ -863,9 +863,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package com.acme.project.impl;
-              
+
               import static com.acme.product.v2.RunnableFactory.getString;
-              
+
               public class StaticImportWorker {
                   public void work() {
                       getString().toLowerCase();
@@ -883,7 +883,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product;
-              
+
               public class RunnableFactory {
                   public static final String CONSTANT = "hello";
               }
@@ -892,9 +892,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.project.impl;
-              
+
               import static com.acme.product.RunnableFactory.CONSTANT;
-              
+
               public class StaticImportWorker {
                   public void work() {
                       System.out.println(CONSTANT + " fred.");
@@ -903,9 +903,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package com.acme.project.impl;
-              
+
               import static com.acme.product.v2.RunnableFactory.CONSTANT;
-              
+
               public class StaticImportWorker {
                   public void work() {
                       System.out.println(CONSTANT + " fred.");
@@ -987,23 +987,23 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.myorg;
-              
+
               import java.util.ArrayList;
               import com.yourorg.a.A;
               import java.util.List;
-              
+
               public class Foo {
                   List<A> a = new ArrayList<>();
               }
               """,
             """
               package com.myorg;
-              
+
               import com.myorg.b.B;
-              
+
               import java.util.ArrayList;
               import java.util.List;
-              
+
               public class Foo {
                   List<B> a = new ArrayList<>();
               }
@@ -1019,10 +1019,10 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product;
-              
+
               public class OuterClass {
                   public static class InnerClass {
-              
+
                   }
               }
               """
@@ -1030,15 +1030,15 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package de;
-              
+
               import com.acme.product.OuterClass;
               import com.acme.product.OuterClass.InnerClass;
-              
+
               public class UseInnerClass {
                   public String work() {
                       return new InnerClass().toString();
                   }
-              
+
                   public String work2() {
                       return new OuterClass().toString();
                   }
@@ -1046,15 +1046,15 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package de;
-              
+
               import com.acme.product.v2.OuterClass;
               import com.acme.product.v2.OuterClass.InnerClass;
-              
+
               public class UseInnerClass {
                   public String work() {
                       return new InnerClass().toString();
                   }
-              
+
                   public String work2() {
                       return new OuterClass().toString();
                   }
@@ -1072,7 +1072,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product.util.accessDecision;
-              
+
               public enum AccessVote {
                   ABSTAIN
               }
@@ -1081,9 +1081,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package de;
-              
+
               import com.acme.product.util.accessDecision.AccessVote;
-              
+
               public class ProjectVoter {
                   public AccessVote vote() {
                       return AccessVote.ABSTAIN;
@@ -1092,9 +1092,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package de;
-              
+
               import com.acme.product.v2.util.accessDecision.AccessVote;
-              
+
               public class ProjectVoter {
                   public AccessVote vote() {
                       return AccessVote.ABSTAIN;
@@ -1121,7 +1121,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import com.acme.product.Procedure;
-              
+
               public abstract class Worker {
                   void callWorker() {
                       worker(() -> {
@@ -1132,7 +1132,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import com.acme.product.Procedure2;
-              
+
               public abstract class Worker {
                   void callWorker() {
                       worker(() -> {
@@ -1153,7 +1153,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product.util.accessDecision;
-              
+
               public enum AccessVote {
                   ABSTAIN,
                   GRANT
@@ -1163,9 +1163,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package de;
-              
+
               import com.acme.product.util.accessDecision.AccessVote;
-              
+
               public class ProjectVoter {
                   public AccessVote vote(Object input) {
                       AccessVote fred;
@@ -1176,9 +1176,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package de;
-              
+
               import com.acme.product.v2.util.accessDecision.AccessVote;
-              
+
               public class ProjectVoter {
                   public AccessVote vote(Object input) {
                       AccessVote fred;
@@ -1199,7 +1199,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product.util.accessDecision;
-              
+
               public enum AccessVote {
                   ABSTAIN,
                   GRANT
@@ -1209,9 +1209,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package de;
-              
+
               import com.acme.product.util.accessDecision.AccessVote;
-              
+
               public class ProjectVoter {
                   public AccessVote vote(Object input) {
                       return input == null ? AccessVote.GRANT : AccessVote.ABSTAIN;
@@ -1220,9 +1220,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package de;
-              
+
               import com.acme.product.v2.util.accessDecision.AccessVote;
-              
+
               public class ProjectVoter {
                   public AccessVote vote(Object input) {
                       return input == null ? AccessVote.GRANT : AccessVote.ABSTAIN;
@@ -1272,7 +1272,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import java.util.List;
-              
+
               /**
                * {@link List} here
                */
@@ -1282,7 +1282,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import java.util.Collection;
-              
+
               /**
                * {@link Collection} here
                */
@@ -1302,7 +1302,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product.factory;
-              
+
               public class V1Factory {
                   public static String getItem() {
                       return "V1Factory";
@@ -1313,7 +1313,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package com.acme.product.factory;
-              
+
               public class V2Factory {
                   public static String getItem() {
                       return "V2Factory";
@@ -1324,16 +1324,16 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import com.acme.product.factory.V1Factory;
-              
+
               import static com.acme.product.factory.V2Factory.getItem;
-              
+
               public class UseFactories {
                   static class MyV1Factory extends V1Factory {
                       static String getMyItemInherited() {
                           return getItem();
                       }
                   }
-              
+
                   static String getMyItemStaticImport() {
                       return getItem();
                   }
@@ -1341,16 +1341,16 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import com.acme.product.factory.V1FactoryA;
-              
+
               import static com.acme.product.factory.V2Factory.getItem;
-              
+
               public class UseFactories {
                   static class MyV1Factory extends V1FactoryA {
                       static String getMyItemInherited() {
                           return getItem();
                       }
                   }
-              
+
                   static String getMyItemStaticImport() {
                       return getItem();
                   }
@@ -1395,7 +1395,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             spec -> spec.path("a/b/NoMatch.java").afterRecipe(cu -> {
                 assertThat(PathUtils.separatorsToUnix(cu.getSourcePath().toString())).isEqualTo("a/b/NoMatch.java");
-                assertThat(TypeUtils.isOfClassType(cu.getClasses().get(0).getType(), "x.y.Target")).isTrue();
+                assertThat(TypeUtils.isOfClassType(cu.getClasses().getFirst().getType(), "x.y.Target")).isTrue();
             })
           )
         );
@@ -1419,7 +1419,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             spec -> spec.path("a/b/Original.java").afterRecipe(cu -> {
                 assertThat(PathUtils.separatorsToUnix(cu.getSourcePath().toString())).isEqualTo("x/y/Target.java");
-                assertThat(TypeUtils.isOfClassType(cu.getClasses().get(0).getType(), "x.y.Target")).isTrue();
+                assertThat(TypeUtils.isOfClassType(cu.getClasses().getFirst().getType(), "x.y.Target")).isTrue();
             })
           )
         );
@@ -1433,15 +1433,15 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package a.b;
-              
+
               import java.util.List;
-              
+
               class Original {
               }
               """,
             """
               import java.util.List;
-              
+
               class Target {
               }
               """
@@ -1457,7 +1457,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package a.b;
-              
+
               class Original {
               }
               """,
@@ -1577,9 +1577,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package org.foo;
-              
+
               import a.A1;
-              
+
               public class Example {
                   public A1 method(A1 a1) {
                       return a1;
@@ -1588,9 +1588,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package org.foo;
-              
+
               import a.A2;
-              
+
               public class Example {
                   public A2 method(A2 a1) {
                       return a1;
@@ -1602,7 +1602,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import a.A1;
               import org.foo.Example;
-              
+
               public class Test {
                   A1 local = new Example().method(null);
               }
@@ -1610,7 +1610,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import a.A2;
               import org.foo.Example;
-              
+
               public class Test {
                   A2 local = new Example().method(null);
               }
@@ -1623,9 +1623,166 @@ class ChangeTypeTest implements RewriteTest {
 
                 assertThat(TypeUtils.asFullyQualified(methodType.getReturnType()).getFullyQualifiedName())
                   .isEqualTo("a.A2");
-                assertThat(TypeUtils.asFullyQualified(methodType.getParameterTypes().get(0)).getFullyQualifiedName())
+                assertThat(TypeUtils.asFullyQualified(methodType.getParameterTypes().getFirst()).getFullyQualifiedName())
                   .isEqualTo("a.A2");
             })
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-static-analysis/issues/582")
+    @Test
+    void renameWhenInitializerTypeMatches() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.util.ArrayList", "java.util.LinkedList", false)),
+          //language=java
+          java(
+            """
+              import java.util.*;
+
+              class Test {
+                  void test() {
+                      List<Integer> list = new ArrayList<>();
+                      list.add(1);
+                      list.add(2);
+                  }
+              }
+              """,
+            """
+              import java.util.*;
+
+              class Test {
+                  void test() {
+                      List<Integer> list = new LinkedList<>();
+                      list.add(1);
+                      list.add(2);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotRenameRandomVariablesMatchingClassName() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("a.A1", "a.A2", false)),
+          java(
+            """
+              package a;
+              public class A1 {
+              }
+              """,
+            """
+              package a;
+              public class A2 {
+              }
+              """
+          ),
+          java(
+            """
+              package org.foo;
+
+              import a.A1;
+
+              public class Example {
+                  public String method(A1 a, String a1) {
+                      return a1;
+                  }
+              }
+              """,
+            """
+              package org.foo;
+
+              import a.A2;
+
+              public class Example {
+                  public String method(A2 a, String a1) {
+                      return a1;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void noChangeToVariableNameWithoutChangeToType() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("a.A1", "a.A2", true)),
+          java(
+            """
+              package a;
+              public class A1 {
+              }
+              """
+          ),
+          java(
+            """
+              package a;
+              public class A2 {
+              }
+              """
+          ),
+          java(
+            """
+              package org.foo;
+
+              import a.A1;
+              import a.A2;
+
+              public class Example {
+                  public A1 method1(A1 a1) {
+                      return a1;
+                  }
+                  public A2 method2(A2 a1) {
+                      return a1; // Unchanged
+                  }
+              }
+              """,
+            """
+              package org.foo;
+
+              import a.A2;
+
+              public class Example {
+                  public A2 method1(A2 a1) {
+                      return a1;
+                  }
+                  public A2 method2(A2 a1) {
+                      return a1; // Unchanged
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotRenameVariableNeedlessly() {
+        // Comparison to java.util.Optional: this method is equivalent to Java 8's Optional.orElse(null).
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.awt.List", "java.util.List", false)),
+          //language=java
+          java(
+            """
+              import java.awt.List;
+
+              class A {
+                  List foo(List list) {
+                      return list;
+                  }
+              }
+              """,
+            """
+              import java.util.List;
+
+              class A {
+                  List foo(List list) {
+                      return list;
+                  }
+              }
+              """
           )
         );
     }
@@ -1638,14 +1795,14 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class Test {
                   A1 a;
               }
               """,
             """
               import a.A2;
-              
+
               public class Test {
                   A2 a;
               }
@@ -1668,7 +1825,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import a.A1;
-              
+
               public class Test {
                   <T extends A1> T method(T t) {
                       return t;
@@ -1677,7 +1834,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import a.A2;
-              
+
               public class Test {
                   <T extends A2> T method(T t) {
                       return t;
@@ -1700,7 +1857,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package a;
-              
+
               public class A1 {
                   public A1() {
                   }
@@ -1708,7 +1865,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package a;
-              
+
               public class A2 {
                   public A2() {
                   }
@@ -1731,12 +1888,12 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-              
+
               import java.lang.annotation.ElementType;
               import java.lang.annotation.Retention;
               import java.lang.annotation.RetentionPolicy;
               import java.lang.annotation.Target;
-              
+
               @Target({ElementType.TYPE, ElementType.METHOD})
               @Retention(RetentionPolicy.RUNTIME)
               public @interface Test1 {}
@@ -1745,12 +1902,12 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-              
+
               import java.lang.annotation.ElementType;
               import java.lang.annotation.Retention;
               import java.lang.annotation.RetentionPolicy;
               import java.lang.annotation.Target;
-              
+
               @Target({ElementType.TYPE, ElementType.METHOD})
               @Retention(RetentionPolicy.RUNTIME)
               public @interface Test2 {}
@@ -1759,7 +1916,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import org.openrewrite.Test1;
-              
+
               public class A {
                   @Test1
                   void method() {}
@@ -1767,7 +1924,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import org.openrewrite.Test2;
-              
+
               public class A {
                   @Test2
                   void method() {}
@@ -1782,8 +1939,8 @@ class ChangeTypeTest implements RewriteTest {
     }
 
     @Disabled("requires correct Kind.")
-    @SuppressWarnings("StatementWithEmptyBody")
     @Issue("https://github.com/openrewrite/rewrite/issues/2478")
+    @SuppressWarnings("StatementWithEmptyBody")
     @Test
     void changeJavaTypeClassKindEnum() {
         rewriteRun(
@@ -1845,10 +2002,10 @@ class ChangeTypeTest implements RewriteTest {
               public class Test {
                   private class InnerA {
                   }
-              
+
                   private class InnerB {
                   }
-              
+
                   public void test(String s) {
                       InnerA a = new InnerA();
                   }
@@ -1858,10 +2015,10 @@ class ChangeTypeTest implements RewriteTest {
               public class Test {
                   private class InnerA {
                   }
-              
+
                   private class InnerB {
                   }
-              
+
                   public void test(String s) {
                       InnerB a = new InnerB();
                   }
@@ -1892,9 +2049,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-              
+
               import org.openrewrite.Test;
-              
+
               public class Sibling {
                   public Test test() {
                       return new Test();
@@ -1903,9 +2060,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-              
+
               import org.openrewrite.subpackage.Test;
-              
+
               public class Sibling {
                   public Test test() {
                       return new Test();
@@ -1953,9 +2110,9 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import org.codehaus.jackson.map.ObjectMapper;
-              
+
               import static org.codehaus.jackson.map.SerializationConfig.Feature.WRAP_ROOT_VALUE;
-              
+
               class A {
                   void test() {
                       ObjectMapper mapper = new ObjectMapper();
@@ -1965,9 +2122,9 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import com.fasterxml.jackson.databind.ObjectMapper;
-              
+
               import static com.fasterxml.jackson.databind.SerializationFeature.WRAP_ROOT_VALUE;
-              
+
               class A {
                   void test() {
                       ObjectMapper mapper = new ObjectMapper();
@@ -1979,9 +2136,9 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
-    @Test
-    @Issue("https://github.com/openrewrite/rewrite/issues/4452")
     @Disabled("flaky on CI")
+    @Issue("https://github.com/openrewrite/rewrite/issues/4452")
+    @Test
     void shouldFullyQualifyWhenNewTypeIsAmbiguous() {
         rewriteRun(
           spec -> spec.recipe(new ChangeType(
@@ -1994,7 +2151,7 @@ class ChangeTypeTest implements RewriteTest {
               import lombok.NonNull;
               import javax.annotation.Nonnull;
               import org.immutables.value.Value;
-              
+
               @Value.Immutable
               @Value.Style(passAnnotations = Nonnull.class)
               interface ConflictingImports {
@@ -2004,7 +2161,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import lombok.NonNull;
               import org.immutables.value.Value;
-              
+
               @Value.Immutable
               @Value.Style(passAnnotations = org.checkerframework.checker.nullness.qual.NonNull.class)
               interface ConflictingImports {
@@ -2025,7 +2182,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package org.a;
-              
+
               public class A {
                 public static String A = "A";
               }
@@ -2034,7 +2191,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package org.ab;
-              
+
               public class AB {
                 public static String A = "A";
                 public static String B = "B";
@@ -2046,7 +2203,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import org.a.A;
               import org.ab.AB;
-              
+
               class Letters {
                 String a = A.A;
                 String b = AB.B;
@@ -2054,7 +2211,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             """
               import org.ab.AB;
-              
+
               class Letters {
                 String a = AB.A;
                 String b = AB.B;
@@ -2098,9 +2255,9 @@ class ChangeTypeTest implements RewriteTest {
                 TreeVisitor<?, ExecutionContext> visitor = new ChangeType("hello.HelloClass", "hello.GoodbyeClass", false).getVisitor();
 
                 J.CompilationUnit cu = (J.CompilationUnit) visitor.visit(source, new InMemoryExecutionContext());
-                assertEquals("GoodbyeClass", cu.getClasses().get(0).getSimpleName());
+                assertEquals("GoodbyeClass", cu.getClasses().getFirst().getSimpleName());
 
-                J.ClassDeclaration cd = (J.ClassDeclaration) visitor.visit(source.getClasses().get(0), new InMemoryExecutionContext());
+                J.ClassDeclaration cd = (J.ClassDeclaration) visitor.visit(source.getClasses().getFirst(), new InMemoryExecutionContext());
                 assertEquals("GoodbyeClass", cd.getSimpleName());
             }))
         );
@@ -2149,8 +2306,8 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4773")
+    @Test
     void noRenameOfTypeWithMatchingPrefix() {
         rewriteRun(
           spec -> spec.recipe(new ChangeType("org.codehaus.jackson.annotate.JsonIgnoreProperties", "com.fasterxml.jackson.annotation.JsonIgnoreProperties", false))
@@ -2173,7 +2330,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import org.codehaus.jackson.annotate.JsonIgnore;
               import org.codehaus.jackson.annotate.JsonIgnoreProperties;
-              
+
               @JsonIgnoreProperties(ignoreUnknown = true)
               public class myClass {
                   @JsonIgnore
@@ -2185,7 +2342,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
               import org.codehaus.jackson.annotate.JsonIgnore;
-              
+
               @JsonIgnoreProperties(ignoreUnknown = true)
               public class myClass {
                   @JsonIgnore
@@ -2198,20 +2355,20 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4764")
+    @Test
     void changeTypeOfInnerClass() {
         rewriteRun(
           spec -> spec.recipe(new ChangeType("foo.A$Builder", "bar.A$Builder", true))
             .parser(JavaParser.fromJavaVersion().dependsOn(
                 """
                   package foo;
-                  
+
                   public class A {
                     public A.Builder builder() {
                       return new A.Builder();
                     }
-                  
+
                     public static class Builder {
                       public A build() {
                         return new A();
@@ -2221,12 +2378,12 @@ class ChangeTypeTest implements RewriteTest {
                   """,
                 """
                   package bar;
-                  
+
                   public class A {
                     public A.Builder builder() {
                       return new A.Builder();
                     }
-                  
+
                     public static class Builder {
                       public A build() {
                         return new A();
@@ -2240,7 +2397,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import foo.A;
               import foo.A.Builder;
-              
+
               class Test {
                 A test() {
                     A.Builder b = A.builder();
@@ -2250,7 +2407,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
                 """
               import foo.A;
-              
+
               class Test {
                 A test() {
                     bar.A.Builder b = A.builder();
