@@ -124,8 +124,8 @@ class JavaParserTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("RedundantSuppression")
     @Issue("https://github.com/openrewrite/rewrite/issues/2313")
+    @SuppressWarnings("RedundantSuppression")
     @Test
     void annotationCommentWithNoSpaceParsesCorrectly() {
         rewriteRun(
@@ -137,7 +137,7 @@ class JavaParserTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu ->
-              assertThat(cu.getClasses().get(0).getLeadingAnnotations()).hasSize(2))
+              assertThat(cu.getClasses().getFirst().getLeadingAnnotations()).hasSize(2))
           )
         );
     }
@@ -154,7 +154,7 @@ class JavaParserTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu ->
-              assertThat(cu.getClasses().get(0).getLeadingAnnotations()).hasSize(2))
+              assertThat(cu.getClasses().getFirst().getLeadingAnnotations()).hasSize(2))
           )
         );
     }
@@ -184,8 +184,8 @@ class JavaParserTest implements RewriteTest {
         assertThat(updatedTemp.toFile().exists()).isTrue();
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/3222")
+    @Test
     void parseFromByteArray() {
         try (ScanResult scan = new ClassGraph().scan()) {
             byte[][] classes = scan.getResourcesMatchingWildcard("javaparser-byte-array-tests/**.class").stream()
@@ -208,7 +208,7 @@ class JavaParserTest implements RewriteTest {
               public class User implements InterfaceA, InterfaceB {
                 @Override
                 public void methodA() {}
-              
+
                 @Override
                public void methodB() {}
               }
@@ -238,8 +238,8 @@ class JavaParserTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/1895")
+    @Test
     void moduleInfo() {
         // Ignored until properly handled: https://github.com/openrewrite/rewrite/issues/4054#issuecomment-2267605739
         assertFalse(JavaParser.fromJavaVersion().build().accept(Path.of("src/main/java/foo/module-info.java")));
@@ -309,8 +309,8 @@ class JavaParserTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/pull/4624")
+    @Test
     void shouldParseComments() {
         rewriteRun(
           java(
@@ -330,11 +330,11 @@ class JavaParserTest implements RewriteTest {
                    */
               }
               """,
-            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().get(0).getBody().getEnd().getComments())
+            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().getFirst().getBody().getEnd().getComments())
               .extracting("text")
               .containsExactly(
                 """
-                  
+
                        * public Some getOther() { return other; }
                        *
                        \
@@ -348,7 +348,7 @@ class JavaParserTest implements RewriteTest {
                        \
                   """,
                 """
-                  
+
                        * public void setOther(Some value) { this.other =
                        * value; }
                        \
@@ -392,6 +392,48 @@ class JavaParserTest implements RewriteTest {
             }
             """
           ));
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/5445")
+    @Test
+    void parseSwitchBlock() {
+        rewriteRun(
+          java(
+            """
+            public class Foo {
+              private String foo(final int i) {
+                return switch (i) {
+                  case 200:
+                    {
+                      yield "I'm in a block";
+                    }
+                  case 250, 300 -> {
+                      yield "another block";
+                  }
+                  case 400:
+                    yield "single line yield";
+                  default:
+                    yield "default";
+                };
+              }
+              private String mapFoo(final int i) {
+                String temp;
+                switch (i) {
+                  case 100: {
+                    temp = "value in block";
+                    break;
+                  }
+                  case 200, 300-> {
+                    temp = "another value in block";
+                  }
+                  default: temp = "default value";
+                }
+                return temp;
+              }
+            }
+            """
+          )
+        );
     }
 
 }
