@@ -21,6 +21,7 @@ import org.openrewrite.ExecutionContext;
 import org.openrewrite.Issue;
 import org.openrewrite.Recipe;
 import org.openrewrite.java.tree.J;
+import org.openrewrite.java.tree.Statement;
 import org.openrewrite.test.RewriteTest;
 
 import java.util.ArrayList;
@@ -78,7 +79,7 @@ class RenameVariableTest implements RewriteTest {
         return toRecipe(() -> new JavaVisitor<>() {
             @Override
             public J visitClassDeclaration(J.ClassDeclaration classDecl, ExecutionContext ctx) {
-                if (classDecl.getSimpleName().equals("A")) {
+                if ("A".equals(classDecl.getSimpleName())) {
                     List<J.VariableDeclarations> variableDecls = classDecl.getBody().getStatements().stream()
                       .filter(J.VariableDeclarations.class::isInstance)
                       .map(J.VariableDeclarations.class::cast)
@@ -121,7 +122,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   private String name;
-                  
+
                   /**
                    * The length of <code>name</code> added to the length of {@link #name}.
                    *
@@ -135,7 +136,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   private String _name;
-                  
+
                   /**
                    * The length of <code>name</code> added to the length of {@link #_name}.
                    *
@@ -222,11 +223,11 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-                            
+
               public class A<T> {
                   private String _val;
                   private String name;
-                   
+
                   A(String name, String _val) {
                       this._val = _val;
                       this.name = name;
@@ -235,11 +236,11 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-                            
+
               public class A<T> {
                   private String v;
                   private String name;
-                   
+
                   A(String name, String v) {
                       this.v = v;
                       this.name = name;
@@ -809,9 +810,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   if (getCursor().getParentTreeCursor().getValue() instanceof J.MethodDeclaration) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n2"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n2"));
                   } else if (!(getCursor().getParentTreeCursor().getParentTreeCursor().getValue() instanceof J.ClassDeclaration)) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n1"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -820,7 +821,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class B {
                   int n;
-                            
+
                   {
                       n++; // do not change.
                       int n;
@@ -829,7 +830,7 @@ class RenameVariableTest implements RewriteTest {
                       if(n + 1 == 2) {}
                       n++;
                   }
-                 
+
                   public int foo(int n) {
                       return n + this.n;
                   }
@@ -838,7 +839,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class B {
                   int n;
-                            
+
                   {
                       n++; // do not change.
                       int n1;
@@ -847,7 +848,7 @@ class RenameVariableTest implements RewriteTest {
                       if(n1 + 1 == 2) {}
                       n1++;
                   }
-                 
+
                   public int foo(int n2) {
                       return n2 + this.n;
                   }
@@ -884,8 +885,8 @@ class RenameVariableTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/3051")
+    @Test
     void doNotRenameMethods() {
         rewriteRun(
           spec -> spec.recipe(renameVariableTest("contains", "foobar", true)),
@@ -956,8 +957,8 @@ class RenameVariableTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4059")
+    @Test
     void renameTypeCastedField() {
         rewriteRun(
           spec -> spec.recipe(renameVariableTest("objArray", "objects", false)),
@@ -996,15 +997,15 @@ class RenameVariableTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/pull/5369")
+    @Test
     void hiddenVariablesGetRenamedCorrectly() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
                 @Override
                 public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                     if (getCursor().getParentTreeCursor().getValue() instanceof J.MethodDeclaration) {
-                        doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n1"));
+                        doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
                     }
                     return super.visitVariableDeclarations(multiVariable, ctx);
                 }
@@ -1041,9 +1042,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   J target = getCursor().getParentTreeCursor().getParentTreeCursor().getValue();
-                  if ("hidden".equals(multiVariable.getVariables().get(0).getSimpleName()) &&
-                    target instanceof J.ClassDeclaration && ((J.ClassDeclaration) target).getSimpleName().equals("Base")) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "changed"));
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
+                    target instanceof J.ClassDeclaration && "Base".equals(((J.ClassDeclaration) target).getSimpleName())) {
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -1053,25 +1054,25 @@ class RenameVariableTest implements RewriteTest {
               class Base {
                   protected Base visible;
                   protected Base hidden;
-              
+
                   Base base() {
                       return hidden;
                   }
               }
-              
+
               class Middle extends Base {
                   Middle middle() {
                       return (Middle) hidden;
                   }
               }
-              
+
               class Extended extends Middle {
                   private Base hidden;
-              
+
                   Extended extended() {
                       return (Extended) hidden;
                   }
-              
+
                   public Extended test(Base hidden) {
                       this.hidden = super.hidden;
                       this.hidden = hidden.hidden;
@@ -1091,25 +1092,25 @@ class RenameVariableTest implements RewriteTest {
               class Base {
                   protected Base visible;
                   protected Base changed;
-              
+
                   Base base() {
                       return changed;
                   }
               }
-              
+
               class Middle extends Base {
                   Middle middle() {
                       return (Middle) changed;
                   }
               }
-              
+
               class Extended extends Middle {
                   private Base hidden;
-              
+
                   Extended extended() {
                       return (Extended) hidden;
                   }
-              
+
                   public Extended test(Base hidden) {
                       this.hidden = super.changed;
                       this.hidden = hidden.changed;
@@ -1136,9 +1137,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   J target = getCursor().getParentTreeCursor().getParentTreeCursor().getValue();
-                  if ("hidden".equals(multiVariable.getVariables().get(0).getSimpleName()) &&
-                    target instanceof J.ClassDeclaration && ((J.ClassDeclaration) target).getSimpleName().equals("Extended")) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "changed"));
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
+                    target instanceof J.ClassDeclaration && "Extended".equals(((J.ClassDeclaration) target).getSimpleName())) {
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -1148,25 +1149,25 @@ class RenameVariableTest implements RewriteTest {
               class Base {
                   protected Base visible;
                   protected Base hidden;
-              
+
                   Base base() {
                       return hidden;
                   }
               }
-              
+
               class Middle extends Base {
                   Middle middle() {
                       return (Middle) hidden;
                   }
               }
-              
+
               class Extended extends Middle {
                   private Base hidden;
-              
+
                   Extended extended() {
                       return (Extended) hidden;
                   }
-              
+
                   public Extended test(Base hidden) {
                       this.hidden = super.hidden;
                       this.hidden = hidden.hidden;
@@ -1186,25 +1187,25 @@ class RenameVariableTest implements RewriteTest {
               class Base {
                   protected Base visible;
                   protected Base hidden;
-              
+
                   Base base() {
                       return hidden;
                   }
               }
-              
+
               class Middle extends Base {
                   Middle middle() {
                       return (Middle) hidden;
                   }
               }
-              
+
               class Extended extends Middle {
                   private Base changed;
-              
+
                   Extended extended() {
                       return (Extended) changed;
                   }
-              
+
                   public Extended test(Base hidden) {
                       this.changed = super.hidden;
                       this.changed = hidden.hidden;
@@ -1231,9 +1232,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   J target = getCursor().getParentTreeCursor().getValue();
-                  if ("hidden".equals(multiVariable.getVariables().get(0).getSimpleName()) &&
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
                     target instanceof J.MethodDeclaration) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "changed"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -1243,25 +1244,25 @@ class RenameVariableTest implements RewriteTest {
               class Base {
                   protected Base visible;
                   protected Base hidden;
-              
+
                   Base base() {
                       return hidden;
                   }
               }
-              
+
               class Middle extends Base {
                   Middle middle() {
                       return (Middle) hidden;
                   }
               }
-              
+
               class Extended extends Middle {
                   private Base hidden;
-              
+
                   Extended extended() {
                       return (Extended) hidden;
                   }
-              
+
                   public Extended test(Base hidden) {
                       this.hidden = super.hidden;
                       this.hidden = hidden.hidden;
@@ -1281,25 +1282,25 @@ class RenameVariableTest implements RewriteTest {
               class Base {
                   protected Base visible;
                   protected Base hidden;
-              
+
                   Base base() {
                       return hidden;
                   }
               }
-              
+
               class Middle extends Base {
                   Middle middle() {
                       return (Middle) hidden;
                   }
               }
-              
+
               class Extended extends Middle {
                   private Base hidden;
-              
+
                   Extended extended() {
                       return (Extended) hidden;
                   }
-              
+
                   public Extended test(Base changed) {
                       this.hidden = super.hidden;
                       this.hidden = changed.hidden;
@@ -1312,6 +1313,114 @@ class RenameVariableTest implements RewriteTest {
                       visible.hidden = changed;
                       changed.hidden.hidden = changed.hidden = this.hidden = changed;
                       return this;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/5369")
+    @Test
+    void hiddenVariablesGetRenamedCorrectlyInBlocks() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+              @Override
+              public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
+                  if (multiVariable.getVariables().getFirst().isField(getCursor()) || multiVariable.getPrefix().getComments().isEmpty()) {
+                      return multiVariable;
+                  }
+                  doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
+                  return super.visitVariableDeclarations(multiVariable, ctx);
+              }
+          })),
+          java(
+            """
+              public class A {
+                  int n;
+
+                  public void blocks() {
+                      {
+                          //only this one is in scope
+                          int n = 0;
+                          int x = n;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                  }
+              }
+              """,
+            """
+              public class A {
+                  int n;
+
+                  public void blocks() {
+                      {
+                          //only this one is in scope
+                          int n1 = 0;
+                          int x = n1;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/5369")
+    @Test
+    void hiddenVariablesGetRenamedCorrectlyInClass() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+
+              @Override
+              public J visitBlock(J.Block block, ExecutionContext ctx) {
+                  if (getCursor().getParent() != null && getCursor().getParent().getValue() instanceof J.ClassDeclaration) {
+                      for (Statement statement : block.getStatements()) {
+                          if (statement instanceof J.VariableDeclarations) {
+                              doAfterVisit(new RenameVariable<>(((J.VariableDeclarations) statement).getVariables().getFirst(), "n1"));
+                          }
+                      }
+                  }
+                  return super.visitBlock(block, ctx);
+              }
+          })),
+          java(
+            """
+              public class A {
+                  int n;
+
+                  public void blocks() {
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                  }
+              }
+              """,
+            """
+              public class A {
+                  int n1;
+
+                  public void blocks() {
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
                   }
               }
               """
