@@ -46,7 +46,7 @@ class VariableNameUtilsTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.Identifier visitIdentifier(J.Identifier identifier, ExecutionContext executionContext) {
-                  if (identifier.getSimpleName().equals("name2")) {
+                  if ("name2".equals(identifier.getSimpleName())) {
                       return identifier.withSimpleName(VariableNameUtils.generateVariableName("name1", getCursor(), VariableNameUtils.GenerationStrategy.INCREMENT_NUMBER));
                   }
                   return identifier;
@@ -114,9 +114,9 @@ class VariableNameUtilsTest implements RewriteTest {
           java(
             """
               package bar;
-                            
+
               import foo.Super;
-                            
+
               class Test extends Super {
                   boolean classBlock;
               }
@@ -133,7 +133,7 @@ class VariableNameUtilsTest implements RewriteTest {
             """
               import static java.nio.charset.StandardCharsets.UTF_8;
               import static java.util.Collections.emptyList;
-                            
+
               class Test {
                   boolean classBlock;
               }
@@ -191,7 +191,7 @@ class VariableNameUtilsTest implements RewriteTest {
 
               @Override
               public J.Identifier visitIdentifier(J.Identifier identifier, ExecutionContext p) {
-                  if (identifier.getSimpleName().equals("methodBlockA")) {
+                  if ("methodBlockA".equals(identifier.getSimpleName())) {
                       HashSet<String> variables = getCursor().getNearestMessage("variables", new HashSet<>());
                       variables.addAll(VariableNameUtils.findNamesInScope(getCursor().dropParentUntil(J.Block.class::isInstance)));
                       getCursor().putMessageOnFirstEnclosing(J.CompilationUnit.class, "variables", variables);
@@ -280,11 +280,11 @@ class VariableNameUtilsTest implements RewriteTest {
 
     }
 
-    @ParameterizedTest
     @CsvSource(value = {
       "control:control,methodBlockA",
       "forBlock:forBlock,control,methodBlockA"
     }, delimiter = ':')
+    @ParameterizedTest
     void forLoop(String scope, String result) {
         rewriteRun(
           baseTest(scope, result),
@@ -304,12 +304,12 @@ class VariableNameUtilsTest implements RewriteTest {
         );
     }
 
-    @ParameterizedTest
     @CsvSource(value = {
       "ifScope:ifScope,methodParam,methodBlockA",
       "elseIfScope:elseIfScope,methodParam,methodBlockA",
       "elseScope:elseScope,methodParam,methodBlockA"
     }, delimiter = ':')
+    @ParameterizedTest
     void ifElse(String scope, String result) {
         rewriteRun(
           baseTest(scope, result),
@@ -333,19 +333,19 @@ class VariableNameUtilsTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings({"UnnecessaryLocalVariable", "Convert2Lambda"})
-    @ParameterizedTest
     @CsvSource(value = {
       "supplier:supplier,methodBlockA",
       "anonMethodBlock:anonMethodBlock,methodBlockA,supplier"
     }, delimiter = ':')
+    @ParameterizedTest
+    @SuppressWarnings({"UnnecessaryLocalVariable", "Convert2Lambda"})
     void lambda(String scope, String result) {
         rewriteRun(
           baseTest(scope, result),
           java(
             """
               import java.util.function.Supplier;
-                            
+
               class Test {
                   void method() {
                       boolean methodBlockA;
@@ -372,7 +372,7 @@ class VariableNameUtilsTest implements RewriteTest {
           java(
             """
               package foo.bar;
-                            
+
               class SuperSuper {
                   public int superSuperPublic;
                   protected int superSuperProtected;
@@ -384,7 +384,7 @@ class VariableNameUtilsTest implements RewriteTest {
           java(
             """
               package foo.bar;
-                            
+
               class Super extends SuperSuper {
                   public int superPublic;
                   protected int superProtected;
@@ -396,7 +396,7 @@ class VariableNameUtilsTest implements RewriteTest {
           java(
             """
               package foo.bar;
-                            
+
               class Test extends Super {
                   boolean classBlock;
               }
@@ -405,13 +405,13 @@ class VariableNameUtilsTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("DuplicateBranchesInSwitch")
-    @ParameterizedTest
     @CsvSource(value = {
       "caseA:caseA,methodParam,methodBlockA",
       "caseB:caseB,methodParam,methodBlockA",
       "defaultBlock:defaultBlock,methodParam,methodBlockA"
     }, delimiter = ':')
+    @ParameterizedTest
+    @SuppressWarnings("DuplicateBranchesInSwitch")
     void switchStatement(String scope, String result) {
         rewriteRun(
           baseTest(scope, result),
@@ -439,7 +439,6 @@ class VariableNameUtilsTest implements RewriteTest {
         );
     }
 
-    @ParameterizedTest
     @CsvSource(value = {
       "resourceA:resourceA,methodBlockA",
       "tryBlock:tryBlock,methodBlockA,resourceA,resourceB",
@@ -447,13 +446,14 @@ class VariableNameUtilsTest implements RewriteTest {
       "catchBlock:catchBlock,methodBlockA,resourceA,resourceB,catchControl",
       "finallyBlock:finallyBlock,methodBlockA,resourceA,resourceB"
     }, delimiter = ':')
+    @ParameterizedTest
     void tryCatchFinally(String scope, String result) {
         rewriteRun(
           baseTest(scope, result),
           java(
             """
               import java.io.*;
-                            
+
               class Test {
                   void method() {
                       File methodBlockA = new File("file.txt");
@@ -472,18 +472,18 @@ class VariableNameUtilsTest implements RewriteTest {
         );
     }
 
-    @ParameterizedTest
     @CsvSource(value = {
       "whileBlock:whileBlock,methodParam,methodBlockA",
       "doWhileBlock:doWhileBlock,methodParam,methodBlockA"
     }, delimiter = ':')
+    @ParameterizedTest
     void whileLoops(String scope, String result) {
         rewriteRun(
           baseTest(scope, result),
           java(
             """
               import java.io.*;
-                            
+
               class Test {
                   void method(short methodParam) {
                       boolean methodBlockA;
@@ -510,9 +510,9 @@ class VariableNameUtilsTest implements RewriteTest {
               @Override
               public J.Lambda visitLambda(J.Lambda lambda, ExecutionContext ctx) {
                   lambda = super.visitLambda(lambda, ctx);
-                  if (((J.VariableDeclarations) lambda.getParameters().getParameters().get(0)).getVariables().get(0).getSimpleName().startsWith("i")) {
-                      J.VariableDeclarations declarations = (J.VariableDeclarations) lambda.getParameters().getParameters().get(0);
-                      J.VariableDeclarations.NamedVariable variable = declarations.getVariables().get(0);
+                  if (((J.VariableDeclarations) lambda.getParameters().getParameters().getFirst()).getVariables().getFirst().getSimpleName().startsWith("i")) {
+                      J.VariableDeclarations declarations = (J.VariableDeclarations) lambda.getParameters().getParameters().getFirst();
+                      J.VariableDeclarations.NamedVariable variable = declarations.getVariables().getFirst();
                       variable = variable.withName(variable.getName().withSimpleName(VariableNameUtils.generateVariableName("j", new Cursor(getCursor(), lambda), VariableNameUtils.GenerationStrategy.INCREMENT_NUMBER)));
                       lambda = lambda.withParameters(lambda.getParameters().withParameters(List.of(declarations.withVariables(List.of(variable)))));
                   }
@@ -522,7 +522,7 @@ class VariableNameUtilsTest implements RewriteTest {
           java(
             """
               import java.util.function.Consumer;
-              
+
               @SuppressWarnings("all")
               class Test {
                   void m() {
@@ -537,7 +537,7 @@ class VariableNameUtilsTest implements RewriteTest {
               """,
             """
               import java.util.function.Consumer;
-              
+
               @SuppressWarnings("all")
               class Test {
                   void m() {
@@ -554,15 +554,15 @@ class VariableNameUtilsTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("CatchMayIgnoreException")
     @Issue("https://github.com/openrewrite/rewrite/issues/1937")
+    @SuppressWarnings("CatchMayIgnoreException")
     @Test
     void generateUniqueNameWithIncrementedNumber() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.Identifier visitIdentifier(J.Identifier identifier, ExecutionContext executionContext) {
-                  if (identifier.getSimpleName().equals("ex")) {
+                  if ("ex".equals(identifier.getSimpleName())) {
                       return identifier.withSimpleName(VariableNameUtils.generateVariableName("ignored", getCursor(), VariableNameUtils.GenerationStrategy.INCREMENT_NUMBER));
                   }
                   return identifier;
