@@ -137,7 +137,7 @@ public class KotlinTypeIrSignatureBuilderTest {
                 .findFirst()
                 .orElseThrow()
                 .getValueParameters()
-                .get(0)
+                .getFirst()
                 .getType());
     }
 
