@@ -36,9 +36,9 @@ class PrimitiveTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu -> {
-                J.MethodDeclaration foo = (J.MethodDeclaration) cu.getStatements().get(0);
-                J.VariableDeclarations bar = (J.VariableDeclarations) foo.getBody().getStatements().get(0);
-                J.Literal zero = (J.Literal) bar.getVariables().get(0).getInitializer();
+                J.MethodDeclaration foo = (J.MethodDeclaration) cu.getStatements().getFirst();
+                J.VariableDeclarations bar = (J.VariableDeclarations) foo.getBody().getStatements().getFirst();
+                J.Literal zero = (J.Literal) bar.getVariables().getFirst().getInitializer();
                 assertThat(zero.getType().getKeyword()).isEqualTo("int");
                 assertThat(zero.getValue()).isInstanceOf(Integer.class);
             })
@@ -57,9 +57,9 @@ class PrimitiveTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu -> {
-                J.MethodDeclaration foo = (J.MethodDeclaration) cu.getStatements().get(0);
-                J.VariableDeclarations bar = (J.VariableDeclarations) foo.getBody().getStatements().get(0);
-                J.Literal zero = (J.Literal) bar.getVariables().get(0).getInitializer();
+                J.MethodDeclaration foo = (J.MethodDeclaration) cu.getStatements().getFirst();
+                J.VariableDeclarations bar = (J.VariableDeclarations) foo.getBody().getStatements().getFirst();
+                J.Literal zero = (J.Literal) bar.getVariables().getFirst().getInitializer();
                 assertThat(zero.getType().getKeyword()).isEqualTo("long");
                 assertThat(zero.getValue()).isInstanceOf(Long.class);
             })
