@@ -20,6 +20,8 @@ import org.assertj.core.api.Condition;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.assertj.core.api.ThrowingConsumer;
 import org.intellij.lang.annotations.Language;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -37,10 +39,12 @@ import org.openrewrite.xml.tree.Xml;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Map;
 
+import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @SuppressWarnings({"HttpUrlsUsage", "ConstantConditions", "OptionalGetWithoutIsPresent"})
@@ -50,6 +54,24 @@ class MavenSettingsTest {
       new InMemoryExecutionContext((ThrowingConsumer<Throwable>) input -> {
           throw input;
       }));
+
+    final String MASTER_PASS_ENCRYPTED = "{6hp0oENJ604H81U6AqPSAJNapKivabHsuWVHzJoZJJo=}";
+    final String ENCRYPTED_PASSWORD = "{2XRZmSPonBYHUeRGefWQTymnQks33CW6U1NHTEtSOH4=}";
+
+    private String originalUserHome;
+
+    @TempDir
+    Path tempDir;
+
+    @BeforeEach
+    void setUp() {
+        originalUserHome = System.getProperty("user.home");
+    }
+
+    @AfterEach
+    void tearDown() {
+        System.setProperty("user.home", originalUserHome);
+    }
 
     @Test
     void parse() {
@@ -81,6 +103,62 @@ class MavenSettingsTest {
         ), ctx));
 
         assertThat(ctx.getRepositories()).hasSize(1);
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void parseWithEncryption()  throws IOException{
+        createSettingsSecurityFile();
+
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(ENCRYPTED_PASSWORD)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> "server001".equals(repo.getId()))
+          .matches(repo -> "my_login".equals(repo.getUsername()))
+          .matches(repo -> "password".equals(repo.getPassword()));
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void parsePlainTextWithEncryption()  throws IOException{
+        createSettingsSecurityFile();
+        String plainTextPassword = "password";
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(plainTextPassword)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> "server001".equals(repo.getId()))
+          .matches(repo -> "my_login".equals(repo.getUsername()))
+          .matches(repo -> repo.getPassword().equals(plainTextPassword));
     }
 
     @Issue("https://github.com/openrewrite/rewrite/issues/131")
@@ -302,11 +380,11 @@ class MavenSettingsTest {
           .map(repo -> MavenRepositoryMirror.apply(ctx.getMirrors(), repo)))
           .hasSize(2)
           .haveAtLeastOne(
-            new Condition<>(repo -> repo.getUri().equals("https://internalartifactrepository.yourorg.com"),
+            new Condition<>(repo -> "https://internalartifactrepository.yourorg.com".equals(repo.getUri()),
               "Repository should-be-mirrored should have had its URL changed to https://internalartifactrepository.yourorg.com"
             )
           ).haveAtLeastOne(
-            new Condition<>(repo -> repo.getUri().equals("https://externalrepository.com") &&
+            new Condition<>(repo -> "https://externalrepository.com".equals(repo.getUri()) &&
                                     "should-not-be-mirrored".equals(repo.getId()),
               "Repository should-not-be-mirrored should have had its URL left unchanged"
             )
@@ -334,10 +412,67 @@ class MavenSettingsTest {
 
         assertThat(settings.getServers()).isNotNull();
         assertThat(settings.getServers().getServers()).hasSize(1);
-        assertThat(settings.getServers().getServers().get(0))
-          .matches(repo -> repo.getId().equals("server001"))
-          .matches(repo -> repo.getUsername().equals("my_login"))
-          .matches(repo -> repo.getPassword().equals("my_password"));
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> "server001".equals(repo.getId()))
+          .matches(repo -> "my_login".equals(repo.getUsername()))
+          .matches(repo -> "my_password".equals(repo.getPassword()));
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void serverCredentialsWithEncryption() throws IOException {
+        createSettingsSecurityFile();
+
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(ENCRYPTED_PASSWORD)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> "server001".equals(repo.getId()))
+          .matches(repo -> "my_login".equals(repo.getUsername()))
+          .matches(repo -> "password".equals(repo.getPassword()));
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void serverCredentialsPlainTextWithEncryption() throws IOException {
+        createSettingsSecurityFile();
+        String plainTextPassword = "password";
+
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(plainTextPassword)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> "server001".equals(repo.getId()))
+          .matches(repo -> "my_login".equals(repo.getUsername()))
+          .matches(repo -> repo.getPassword().equals(plainTextPassword));
     }
 
     @Test
@@ -364,8 +499,8 @@ class MavenSettingsTest {
 
         assertThat(settings.getServers()).isNotNull();
         assertThat(settings.getServers().getServers()).hasSize(1);
-        assertThat(settings.getServers().getServers().get(0))
-          .matches(repo -> repo.getId().equals("server001"))
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> "server001".equals(repo.getId()))
           .matches(repo -> repo.getConfiguration().getTimeout().equals(40000L));
     }
 
@@ -506,8 +641,8 @@ class MavenSettingsTest {
 
             assertThat(settings.getLocalRepository())
               .isEqualTo("${custom.location.zz}/maven/local/repository/");
-            assertThat(settings.getServers().getServers().get(0).getUsername()).isEqualTo("${env.PRIVATE_REPO_USERNAME_ZZ}");
-            assertThat(settings.getServers().getServers().get(0).getPassword()).isEqualTo("${env.PRIVATE_REPO_PASSWORD_ZZ}");
+            assertThat(settings.getServers().getServers().getFirst().getUsername()).isEqualTo("${env.PRIVATE_REPO_USERNAME_ZZ}");
+            assertThat(settings.getServers().getServers().getFirst().getPassword()).isEqualTo("${env.PRIVATE_REPO_PASSWORD_ZZ}");
         }
 
         @Test
@@ -552,8 +687,8 @@ class MavenSettingsTest {
 
             assertThat(settings.getServers()).isNotNull();
             assertThat(settings.getServers().getServers()).hasSize(1);
-            assertThat(settings.getServers().getServers().get(0).getUsername()).isEqualTo("user");
-            assertThat(settings.getServers().getServers().get(0).getPassword()).isEqualTo("pass");
+            assertThat(settings.getServers().getServers().getFirst().getUsername()).isEqualTo("user");
+            assertThat(settings.getServers().getServers().getFirst().getPassword()).isEqualTo("pass");
         }
 
         /**
@@ -716,15 +851,14 @@ class MavenSettingsTest {
             ), ctx);
 
             MavenSettings mergedSettings = baseSettings.merge(userSettings);
-            assertThat(mergedSettings.getProfiles().getProfiles().get(0).getId()).isEqualTo("first-profile");
+            assertThat(mergedSettings.getProfiles().getProfiles().getFirst().getId()).isEqualTo("first-profile");
             assertThat(mergedSettings.getProfiles().getProfiles().get(1).getId()).isEqualTo("second-profile");
-            assertThat(mergedSettings.getProfiles().getProfiles().get(0).getRepositories().getRepositories().get(0).getId()).isEqualTo("first-repo");
-            assertThat(mergedSettings.getProfiles().getProfiles().get(1).getRepositories().getRepositories().get(0).getId()).isEqualTo("second-repo");
+            assertThat(mergedSettings.getProfiles().getProfiles().getFirst().getRepositories().getRepositories().getFirst().getId()).isEqualTo("first-repo");
+            assertThat(mergedSettings.getProfiles().getProfiles().get(1).getRepositories().getRepositories().getFirst().getId()).isEqualTo("second-repo");
         }
 
         @Test
         void replacesElementsWithMatchingIds() {
-            Path path = Paths.get("settings.xml");
             var baseSettings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"), installationSettings), ctx);
             var userSettings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
               //language=xml
@@ -765,15 +899,15 @@ class MavenSettingsTest {
             var mergedSettings = userSettings.merge(baseSettings);
 
             assertThat(mergedSettings.getProfiles().getProfiles()).hasSize(1);
-            assertThat(mergedSettings.getProfiles().getProfiles().get(0).getRepositories().getRepositories().get(0).getSnapshots()).isNull();
+            assertThat(mergedSettings.getProfiles().getProfiles().getFirst().getRepositories().getRepositories().getFirst().getSnapshots()).isNull();
             assertThat(mergedSettings.getActiveProfiles().getActiveProfiles()).hasSize(1);
             assertThat(mergedSettings.getMirrors().getMirrors()).hasSize(1);
 
-            assertThat(mergedSettings.getMirrors().getMirrors().get(0).getUrl())
+            assertThat(mergedSettings.getMirrors().getMirrors().getFirst().getUrl())
               .isEqualTo("http://downloads.planetmirror.com/pub/maven3000");
 
             assertThat(mergedSettings.getServers().getServers()).hasSize(1);
-            assertThat(mergedSettings.getServers().getServers().get(0))
+            assertThat(mergedSettings.getServers().getServers().getFirst())
               .hasFieldOrPropertyWithValue("username", "foo")
               .hasFieldOrPropertyWithValue("password", null);
         }
@@ -818,8 +952,8 @@ class MavenSettingsTest {
             """
         ), ctx);
 
-        MavenSettings.Server server = settings.getServers().getServers().get(0);
-        assertThat(server.getConfiguration().getHttpHeaders().get(0).getName()).isEqualTo("X-JFrog-Art-Api");
+        MavenSettings.Server server = settings.getServers().getServers().getFirst();
+        assertThat(server.getConfiguration().getHttpHeaders().getFirst().getName()).isEqualTo("X-JFrog-Art-Api");
     }
 
     @Test
@@ -844,9 +978,9 @@ class MavenSettingsTest {
             """).findFirst().get();
 
         MavenSettings.HttpHeader httpHeader = new MavenSettings.HttpHeader("X-JFrog-Art-Api", "myApiToken");
-        MavenSettings.ServerConfiguration configuration = new MavenSettings.ServerConfiguration(java.util.Collections.singletonList(httpHeader), 10000L);
+        MavenSettings.ServerConfiguration configuration = new MavenSettings.ServerConfiguration(singletonList(httpHeader), 10000L);
         MavenSettings.Server server = new MavenSettings.Server("maven-snapshots", null, null, configuration);
-        MavenSettings.Servers servers = new MavenSettings.Servers(java.util.Collections.singletonList(server));
+        MavenSettings.Servers servers = new MavenSettings.Servers(singletonList(server));
         MavenSettings settings = new MavenSettings(null, null, null, null, servers);
 
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
@@ -861,5 +995,20 @@ class MavenSettingsTest {
           .isNotNull()
             .satisfies(serialized -> assertThat(SemanticallyEqual.areEqual(parsed, serialized)).isTrue())
             .satisfies(serialized -> assertThat(serialized.printAll().replace("\r", "")).isEqualTo(parsed.printAll()));
+    }
+
+    private void createSettingsSecurityFile() throws IOException {
+        // Set up a temporary directory to simulate the .m2 directory
+        System.setProperty("user.home", tempDir.toString());
+        Files.createDirectories(tempDir.resolve(".m2"));
+
+        Files.writeString(tempDir.resolve(".m2/settings-security.xml"),
+          //language=xml
+          """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <settingsSecurity>
+                <master>%s</master>
+            </settingsSecurity>
+            """.formatted(MASTER_PASS_ENCRYPTED));
     }
 }
