@@ -192,7 +192,7 @@ class ChangeTagValueTest implements RewriteTest {
                   @Override
                   public Xml visitDocument(Xml.Document x, ExecutionContext ctx) {
                       doAfterVisit(new ChangeTagValue.RegexReplaceVisitor<>(
-                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).get(0),
+                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).getFirst(),
                         "2.0",
                         "3.0")
                       );
@@ -207,7 +207,7 @@ class ChangeTagValueTest implements RewriteTest {
                       </version>
                   </dependency>
                   """,
-                """ 
+                """
                   <dependency>
                       <version>
                           3.0
@@ -246,7 +246,7 @@ class ChangeTagValueTest implements RewriteTest {
                   @Override
                   public Xml visitDocument(Xml.Document x, ExecutionContext ctx) {
                       doAfterVisit(new ChangeTagValue.RegexReplaceVisitor<>(
-                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).get(0),
+                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).getFirst(),
                         "7.0",
                         "8.0")
                       );
@@ -273,7 +273,7 @@ class ChangeTagValueTest implements RewriteTest {
                   @Override
                   public Xml visitDocument(Xml.Document x, ExecutionContext ctx) {
                       doAfterVisit(new ChangeTagValue.RegexReplaceVisitor<>(
-                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).get(0),
+                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).getFirst(),
                         "7.0",
                         "8.0")
                       );
@@ -297,7 +297,7 @@ class ChangeTagValueTest implements RewriteTest {
                   @Override
                   public Xml visitDocument(Xml.Document x, ExecutionContext ctx) {
                       doAfterVisit(new ChangeTagValue.RegexReplaceVisitor<>(
-                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).get(0),
+                        (Xml.Tag) requireNonNull(x.getRoot().getContent()).getFirst(),
                         "invalid",
                         "2.0")
                       );
